dist_man1_MANS=

if BUILD_BITCOIND
  dist_man1_MANS+=tipuscoind.1
endif

if ENABLE_QT
  dist_man1_MANS+=tipuscoin-qt.1
endif

if BUILD_BITCOIN_CLI
  dist_man1_MANS+=tipuscoin-cli.1
endif

if BUILD_BITCOIN_TX
  dist_man1_MANS+=tipuscoin-tx.1
endif

if ENABLE_WALLET
if BUILD_BITCOIN_WALLET
  dist_man1_MANS+=tipuscoin-wallet.1
endif
endif
